--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
 bcrypt==3.1.5
 certifi==2018.11.29
 cffi==1.11.5
+chardet==3.0.4
+defusedxml==0.5.0
 Django==1.11.17
 django-cors-headers==2.4.0
+idna==2.8
+oauthlib==3.0.1
 olefile==0.46
 Pillow==5.3.0
 pycparser==2.19
+PyJWT==1.7.1
+python3-openid==3.1.0
 pytz==2018.7
+requests==2.21.0
+requests-oauthlib==1.2.0
 selenium==3.141.0
 six==1.12.0
+social-auth-app-django==3.1.0
+social-auth-core==3.1.0
 urllib3==1.24.1
 wincertstore==0.2
